[package]
name = "ublox-sockets"
version = "0.5.0"
edition = "2021"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Common sockets layer for host-based ublox devices"
readme = "README.md"
keywords = ["arm", "cortex-m", "AT", "no-std"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-sockets"
documentation = "https://docs.rs/ublox-sockets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", default-features = false, features = ["derive"] }
heapless = { version = "^0.8", features = ["serde"] }
no-std-net = { version = "0.6", features = ["serde"] }
hash32 = "^0.3"
embassy-time = "0.2"

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[features]
default = ["socket-udp", "socket-tcp", "defmt"]

async = []

defmt = ["dep:defmt", "embassy-time/defmt", "heapless/defmt-03"]

edm = []

socket-tcp = []
socket-udp = []

[patch.crates-io]
no-std-net = { git = "https://github.com/rushmorem/no-std-net", branch = "issue-15" }
